feat: implemented 12-settlements
